# zetic-project

./: .gitignore  CMakeLists.txt  README.md  build-model.py  build.sh
my-inference/: CMakeLists.txt
my-inference/include/: model.h  mylib.h  util.h
my-inference/src/: model.cpp  mylib.cpp  util.cpp
src/: main.cpp
